# fortpy

./: .gitignore  README.md  meson.build  pyproject.toml  test.py
src/FORTRAN/: singrid.f90
src/fortpy/: __init__.py
