# SPDX-FileCopyrightText: 2023 Sunip K. Mukherjee
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = [
  "meson-python",
  "numpy >= 1.14.5", # in order to get include dirs for meson without --no-build-isolation on pip install. isolation = false does not work.
]
build-backend = "mesonpy"

[project]
name = "fortpy"
version = "0.0.1"
requires-python = ">=3.7"
authors = [{ name = "Sunip K. Mukherjee", email = "sunipkmukherjee@gmail.com" }]
description = "Example Python bindings for FORTRAN code"
dependencies = ['meson', 'ninja', 'numpy >= 1.14.5', 'xarray']
readme = "README.md"
